<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/narutoandr"
    android:layout_margin="@dimen/margin"
    android:textSize="@dimen/textSize"
    android:gravity="center"
    android:padding="20sp">

    <EditText
        android:id="@+id/calcul_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:background="@drawable/naruto"
        android:orientation="horizontal"
        android:textSize="30sp">

    </EditText>

    <LinearLayout

        android:id="@+id/linearone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right">

<androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ButtoDELE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
    android:background="@drawable/naruto"
            android:text="@string/_DELE"
            android:textSize="@dimen/raz" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ButtoYM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/naruto"
            android:text="@string/_YM"
            android:textSize="@dimen/raz" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ButtoRAV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/naruto"
            android:text="@string/_RAV"
            android:textSize="@dimen/raz" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ButtonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/naruto"
            android:text="@string/_plus"
            android:textSize="@dimen/raz" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Buttonminus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/naruto"
            android:text="@string/_minus"
            android:textSize="@dimen/raz" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineartow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Butto1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/naruto"
            android:text="@string/_1"
            android:textSize="@dimen/raz" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Butto2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/naruto"
            android:text="@string/_2"
            android:textSize="@dimen/raz" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Butto3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/naruto"
            android:text="@string/_3"
            android:textSize="@dimen/raz"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearfree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Butto4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/naruto"
            android:text="@string/_4"
            android:textSize="@dimen/raz"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Butto5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/naruto"
            android:text="@string/_5"
            android:textSize="@dimen/raz"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Butto6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/naruto"
            android:text="@string/_6"
            android:textSize="@dimen/raz"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton            android:id="@+id/Butto7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/naruto"
            android:text="@string/_7"
            android:textSize="@dimen/raz"/>
        <androidx.appcompat.widget.AppCompatButton            android:id="@+id/Butto8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/naruto"
            android:text="@string/_8"
            android:textSize="@dimen/raz"/>
        <androidx.appcompat.widget.AppCompatButton            android:id="@+id/Butto9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/naruto"
            android:text="@string/_9"
            android:textSize="@dimen/raz"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Butto0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/naruto"
            android:text="@string/_0"
            android:textSize="@dimen/raz"/>

        <androidx.appcompat.widget.AppCompatButton            android:id="@+id/ButtoTOCHKA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/naruto"
            android:text="@string/_TOCHKA"
            android:textSize="@dimen/raz" />



    </LinearLayout>



</LinearLayout>